--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,7 @@ spring.datasource.password=1234
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.defer-datasource-initialization=true
 spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto =create-drop
-
+spring.jpa.hibernate.ddl-auto =update
 
 server.port=8000
 
